2019-10-10  Araki Ken  <arakiken@users.sf.net>

	* fb/ui_font.c: If face->glyph->bitmap_left is less than 0,
	  bitmap at retreated area is skipped in get_ft_bitmap_intern().

	* xlib/ui_window.c: XSizeHints::base_{width|height} is fixed.

	* */ui_window.c, */ui_display.c:
	  total_{width|height}_inc() => max_{width|height}_inc()

	* ui_main_config.c: If DISPLAY environment variable doesn't exist,
	  DISPLAY=:0 is set.

	* main_loop.c: 'mlterm -j genuine' starts if X server is down.

	* win32/ui.c: XParseGeometry() doesn't change argument variables in
	  error of parsing.

2019-10-06  Araki Ken  <arakiken@users.sf.net>

	* wayland/ui.h, wayland/ui_display.c:
	  Whether "text/plain;charset=utf-8" or "UTF8_STRING" is supported or not
	  is checked in data_offer_offer() and xsel_offer_offer().

	* wayland/ui_font.c: If the font name contains "bold" or "italic",
	  FT_Outline_Embolden() or FT_Outline_Transform() is not applied.

	* ui_font_config.c: Warning is output for invalid "DEFAULT_BOLD" etc.

2019-10-05  Araki Ken  <arakiken@users.sf.net>

	* wayland/ui_display.c, wayland/ui.h:
	  - xdg_toplevel_close() invokes window_destroyed event.
	  - Primary selection is supported with the use of gtk-primary-selection.[ch].

	* wayland/gtk-primary-selection.[ch]: Added

2019-10-01  Araki Ken  <arakiken@users.sf.net>

	* wayland/ui_window.c: ui_window_get_str() converts keysym to utf8 string
	  with the use of ui_display_get_utf8().

	* wayland/ui_display.[ch]: ui_display_get_char() => ui_display_get_utf8()

	* ui_font.c: If the width of 'W' glyph is larger than face->max_advance_width,
	  xfont->width_full = the width 'W' glyph.

2019-09-29  Araki Ken  <arakiken@users.sf.net>

	* wayland/ui_display.c: Copy&paste from other applications to mlerm-wl works.

	* wayland/ui_display.c: ui_display_show_root() calls wl_display_dispatch().
	  (Fix for 1) in https://sourceforge.net/p/mlterm/discussion/130836/thread/bc008c18db/#bb38)
